crates/reap-pm-live/tests/ui/snapshot_commit_proof_is_move_only.rs
use reap_pm_state::PmSnapshotCommitProof;

fn replay(proof: PmSnapshotCommitProof) {
    let _first = proof.clone();
    let _second = proof;
}

fn main() {}
